--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contextual Failures • CoRL 2025</title>
+  <title>SEED SET • ICLR 2026</title>
   <meta name="description" content="Project page for SEED-SET (ICLR 2026)." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
       <div class="py-12 md:py-20">
         <div class="text-center">
           <p class="text-sm uppercase tracking-widest text-neutral-500">ICLR 2026</p>
-          <h1 class="mt-3 text-2xl sm:text-4xl md:text-6xl font-extrabold">SEED-SET: Scalable Evolving Experimental Design for System-level Ethical Testing</h1>
+          <h1 class="mt-3 text-2xl sm:text-4xl md:text-4xl font-extrabold">SEED-SET: Scalable Evolving Experimental Design for System-level Ethical Testing</h1>
           <p class="mt-4 text-lg text-neutral-600 max-w-3xl mx-auto">LLM assisted ethical benchmarking of autonomous systems using limited budget testing</p>
           <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
             <a class="px-4 py-2 rounded-xl bg-black text-white" href="https://openreview.net/pdf?id=lfsjVdi72l">PDF</a>
