--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Sticky nav -->
   <header class="sticky top-0 z-40 backdrop-blur bg-white/80 border-b border-neutral-200">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 py-3 flex items-center justify-between">
-      <a href="#top" class="font-semibold">Project • CoRL 2025</a>
+      <a href="#top" class="font-semibold">SEED-SET • ICLR 2026</a>
       <nav class="hidden md:flex gap-5 text-sm">
         <a href="#abstract" class="hover:underline">Abstract</a>
         <!--a href="#video" class="hover:underline">Video</a-->
@@ -33,17 +33,16 @@
       <div class="py-12 md:py-20">
         <div class="text-center">
           <p class="text-sm uppercase tracking-widest text-neutral-500">ICLR 2026</p>
-          <h1 class="mt-3 text-2xl sm:text-4xl md:text-4xl font-extrabold">SEED-SET: Scalable Evolving Experimental Design for System-level Ethical Testing</h1>
+          <h1 class="mt-3 text-2xl sm:text-4xl md:text-5xl font-extrabold">SEED-SET: Scalable Evolving Experimental Design for System-level Ethical Testing</h1>
           <p class="mt-4 text-lg text-neutral-600 max-w-3xl mx-auto">LLM assisted ethical benchmarking of autonomous systems using limited budget testing</p>
           <div class="mt-6 flex flex-wrap items-center justify-center gap-3">
             <a class="px-4 py-2 rounded-xl bg-black text-white" href="https://openreview.net/pdf?id=lfsjVdi72l">PDF</a>
             <a class="px-4 py-2 rounded-xl bg-neutral-200" href="#code">Code</a>
           </div>
-          <div class="mt-6 text-sm text-neutral-500">Anjali Parashar<sup>1*</sup>, Yinkge Li<sup>1</sup>, Eric Yang Yu <sup>1</sup>, Fei Chen<sup>1</sup>, James Neidhoefer<sup>1</sup>, Devesh Upadhyay<sup>2</sup>, Chuchu Fan<sup>1</sup></div>
-          <div class="mt-2 text-xs text-neutral-400">
+          <div class="mt-6 text-sm font-extrabold">Anjali Parashar<sup>1*</sup>, Yinkge Li<sup>1</sup>, Eric Yang Yu <sup>1</sup>, Fei Chen<sup>1</sup>, James Neidhoefer<sup>1</sup>, Devesh Upadhyay<sup>2</sup>, Chuchu Fan<sup>1</sup></div>
+          <div class="mt-2 text-sm text-neutral-400">
             <sup>1</sup> LIDS, MIT <br>
             <sup>2</sup> SAAB <br>
-            * Corresponding author
           </div>
           <img class="mt-10 rounded-2xl shadow" src="static/images/seed-set-overview.png" alt="Teaser figure" />
           <p class="mt-2 text-xs text-neutral-500">Pipeline overview using Distributed Energy Resource distribution in power grid example</p>
