--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a class="px-4 py-2 rounded-xl bg-black text-white" href="https://openreview.net/pdf?id=lfsjVdi72l">PDF</a>
             <a class="px-4 py-2 rounded-xl bg-neutral-200" href="#code">Code</a>
           </div>
-          <div class="mt-6 text-sm font-extrabold">Anjali Parashar<sup>1*</sup>, Yinkge Li<sup>1</sup>, Eric Yang Yu <sup>1</sup>, Fei Chen<sup>1</sup>, James Neidhoefer<sup>1</sup>, Devesh Upadhyay<sup>2</sup>, Chuchu Fan<sup>1</sup></div>
-          <div class="mt-2 text-sm text-neutral-400">
+          <div class="mt-4 text-lg text-neutral-600 max-w-3xl mx-auto">Anjali Parashar<sup>1*</sup>, Yinkge Li<sup>1</sup>, Eric Yang Yu <sup>1</sup>, Fei Chen<sup>1</sup>, James Neidhoefer<sup>1</sup>, Devesh Upadhyay<sup>2</sup>, Chuchu Fan<sup>1</sup></div>
+          <div class="mt-6 text-sm font-extrabold">
             <sup>1</sup> LIDS, MIT <br>
             <sup>2</sup> SAAB <br>
           </div>
